# poids

./: .gitignore  CMakeLists.txt  README.md  poid.sln  poids.sln
.github/workflows/: build.yml  cmake-single-platform.yml
include/poids/: kgms.hpp  poids.hpp  si.hpp
include/poids/angle/: base.hpp  unit.hpp
include/poids/core/: base_quantity.hpp  make_base.hpp  quantity.hpp  quantity_base.hpp  reference.hpp  scalar_support.hpp  traits.hpp
include/poids/kgms/: base.hpp  eigen_support.hpp  types.hpp  unit.hpp  units.hpp
include/poids/scalar_support/: complex.hpp  eigen_vector.hpp
include/poids/si/: constants.hpp  unit.hpp
lib/: CMakeLists.txt
poid/: Dimension.ixx  Unit.ixx  poid.vcxproj  poid.vcxproj.filters  rational.ixx
poids/: CMakeLists.txt  Dimension.h  Dimension.ixx  Metric.h  Metric.ixx  Poids.h  Poids.ixx  SIDimension.h  Unit.h  Unit.ixx  UnitTypes.h  UnitTypes.ixx  poids.vcxproj  poids.vcxproj.filters  rational.ixx
poids/metric/: SIDimension.h  UnitTypes.h  constants.h
poids/util/: rational.h
test/: CMakeLists.txt  dummy.cpp
test-poid/: test-dimension.cpp  test-poid.vcxproj  test-rational.cpp  test-unit.cpp  testRational.cpp
test-poids/: test-dimension.cpp  test-generic-dimension.cpp  test-metric.cpp  test-poids.vcxproj  test-rational.cpp  test-unit.cpp
test/angle/: test_angle_system.cpp
test/core/: test_arithmetic.cpp  test_base_quantity.cpp  test_complex_scalar_support.cpp  test_long_double_scalar_support.cpp  test_quantity.cpp  test_quantity_reference.cpp  test_traits.cpp
test/eigen_support/: CMakeLists.txt  test_kgms_eigen_types.cpp  test_si_eigen_types.cpp  test_vector_arithmetic.cpp  test_vector_support.cpp
test/kgms/: test_base_constants.cpp  test_dimensional_analysis.cpp  test_metric_prefixes.cpp
test/si/: test_base_constants.cpp  test_constants.cpp  test_derived_units.cpp  test_dimensional_analysis.cpp  test_si_prefix.cpp
tests/: CMakeLists.txt  test-poids.vcxproj
