include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(poids_test
    "dummy.cpp"
)

set_target_properties(poids_test
    PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)

target_link_libraries(poids_test
    poids
    GTest::gtest 
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(poids_test)
